syntax = "proto3";

message Plant {
  string id = 1;
  string name = 2;
  string ownerId = 3;
  plantStatus status  = 4;
  string category = 5;
  SensorUpdate latest = 6;
  repeated SensorUpdate history = 7;
}

enum plantStatus{
    GROWING = 0;
    FRUITING = 1;
    HARVESTING = 2;
    IN_TRANSIT= 3;
    DELIVERED = 4;
   }

message SensorUpdate {
  int32 sensorID = 1;
  float humidity = 2;
  float temperature = 3;
  bool hydroSense = 4;
  string pictureUrl = 5;
}

message ShoppingCart {
  string id = 1;
  string userId = 2;
  float totalPrice = 3;
  repeated Plant items = 8;
  }

  message AddResponse {
    string response = 1;
  }

  message UpdateResponse {
    string response = 1;
  }

  message PurchaseResponse {
    string response = 1;
  }
message Empty {}

service PlantService {
    rpc getPlants(Empty) returns (stream Plant){}
    rpc addPlant(Plant) returns (AddResponse) {}
    rpc updatePlant(Plant) returns (UpdateResponse) {}
    rpc purchase(ShoppingCart) returns (PurchaseResponse) {}
} 


